[gd_scene load_steps=16 format=3 uid="uid://bdoa8emasvts3"]

[ext_resource type="Script" uid="uid://c74o40qwxv1la" path="res://scripts/utility/player_manager.gd" id="1_hojqr"]
[ext_resource type="Script" uid="uid://727asywd4f55" path="res://scripts/entities/player/debug_player.gd" id="2_yuggw"]
[ext_resource type="Shader" uid="uid://bj52sv4noi8eh" path="res://shaders/prototype.tres" id="3_vifgh"]
[ext_resource type="MeshLibrary" uid="uid://b88u34a3ref8h" path="res://art_assets/environment/level_1/level1tiles.tres" id="4_ayw8s"]
[ext_resource type="Script" uid="uid://rj0tuqhxassj" path="res://scenes/dev/franklin_s/slow_effect_test.gd" id="5_atxxn"]

[sub_resource type="Environment" id="Environment_bly0l"]
background_mode = 1
background_color = Color(1, 1, 1, 1)
tonemap_mode = 3
tonemap_exposure = 0.5
volumetric_fog_density = 0.02
volumetric_fog_detail_spread = 0.5
adjustment_enabled = true
adjustment_contrast = 1.1
adjustment_saturation = 0.9

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1m1m0"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ggon3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_05f11"]
render_priority = 0
shader = ExtResource("3_vifgh")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8jnod"]
albedo_color = Color(0, 1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s3r3p"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bly0l"]
albedo_color = Color(0.16739999, 0.40878665, 0.62, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_0lut4"]

[sub_resource type="CylinderMesh" id="CylinderMesh_7jl4a"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bgbp7"]

[node name="Prototype" type="Node3D"]

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9999997, 0, 0, 0, 0.9999997, 44.902454, 29.529377, 30.247894)

[node name="Camera3D" type="Camera3D" parent="Marker3D"]
transform = Transform3D(0.70710695, -0.40557995, 0.5792281, 0, 0.81915236, 0.57357657, -0.70710695, -0.40557995, 0.5792281, 0, 0, 0)
keep_aspect = 0
projection = 1
size = 56.098
near = 0.012

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.996632, 0, 0.0820081, 0.0619636, 0.655057, 0.753034, -0.05372, 0.755579, -0.652851, 0, 22.456, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="DirectionalLight3D"]
environment = SubResource("Environment_bly0l")

[node name="PlayerManager" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6510315, 0, 2.2056503)
script = ExtResource("1_hojqr")

[node name="Player" type="CharacterBody3D" parent="PlayerManager"]
script = ExtResource("2_yuggw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerManager/Player"]
shape = SubResource("CapsuleShape3D_1m1m0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerManager/Player"]
mesh = SubResource("CapsuleMesh_ggon3")
surface_material_override/0 = SubResource("ShaderMaterial_05f11")

[node name="Player2" type="CharacterBody3D" parent="PlayerManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.32074, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerManager/Player2"]
shape = SubResource("CapsuleShape3D_1m1m0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerManager/Player2"]
mesh = SubResource("CapsuleMesh_ggon3")
surface_material_override/0 = SubResource("StandardMaterial3D_8jnod")

[node name="Player3" type="CharacterBody3D" parent="PlayerManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.32074, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerManager/Player3"]
shape = SubResource("CapsuleShape3D_1m1m0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerManager/Player3"]
mesh = SubResource("CapsuleMesh_ggon3")
surface_material_override/0 = SubResource("StandardMaterial3D_s3r3p")

[node name="geo" type="Node" parent="."]

[node name="GridMap" type="GridMap" parent="geo"]
mesh_library = ExtResource("4_ayw8s")
cell_center_y = false
data = {
"cells": PackedInt32Array(65519, 65531, 6, 65519, 65532, 6, 65519, 65533, 6, 65519, 65534, 6, 65519, 65535, 6, 65519, 0, 6, 65519, 1, 6, 65519, 2, 6, 65519, 3, 6, 65519, 4, 6, 65519, 5, 6, 65519, 6, 6, 65520, 65531, 6, 65520, 65532, 6, 65520, 65533, 6, 65520, 65534, 6, 65520, 65535, 6, 65520, 0, 6, 65520, 1, 6, 65520, 2, 6, 65520, 3, 6, 65520, 4, 6, 65520, 5, 6, 65520, 6, 6, 65521, 65531, 6, 65521, 65532, 6, 65521, 65533, 6, 65521, 65534, 6, 65521, 65535, 6, 65521, 0, 6, 65521, 1, 6, 65521, 2, 6, 65521, 3, 6, 65521, 4, 6, 65521, 5, 6, 65521, 6, 6, 65522, 65531, 6, 65522, 65532, 6, 65522, 65533, 6, 65522, 65534, 6, 65522, 65535, 6, 65522, 0, 6, 65522, 1, 6, 65522, 2, 6, 65522, 3, 6, 65522, 4, 6, 65522, 5, 6, 65522, 6, 6, 65523, 65531, 6, 65523, 65532, 6, 65523, 65533, 6, 65523, 65534, 6, 65523, 65535, 6, 65523, 0, 6, 65523, 1, 6, 65523, 2, 6, 65523, 3, 6, 65523, 4, 6, 65523, 5, 6, 65523, 6, 6, 65524, 65531, 6, 65524, 65532, 6, 65524, 65533, 6, 65524, 65534, 6, 65524, 65535, 6, 65524, 0, 6, 65524, 1, 6, 65524, 2, 6, 65524, 3, 6, 65524, 4, 6, 65524, 5, 6, 65524, 6, 6, 65525, 65531, 6, 65525, 65532, 6, 65525, 65533, 6, 65525, 65534, 6, 65525, 65535, 6, 65525, 0, 6, 65525, 1, 6, 65525, 2, 6, 65525, 3, 6, 65525, 4, 6, 65525, 5, 6, 65525, 6, 6, 65526, 65531, 6, 65526, 65532, 6, 65526, 65533, 6, 65526, 65534, 6, 65526, 65535, 6, 65526, 0, 6, 65526, 1, 6, 65526, 2, 6, 65526, 3, 6, 65526, 4, 6, 65526, 5, 6, 65526, 6, 6, 65527, 65531, 6, 65527, 65532, 6, 65527, 65533, 6, 65527, 65534, 6, 65527, 65535, 6, 65527, 0, 6, 65527, 1, 6, 65527, 2, 6, 65527, 3, 6, 65527, 4, 6, 65527, 5, 6, 65527, 6, 6, 65528, 65531, 6, 65528, 65532, 6, 65528, 65533, 6, 65528, 65534, 6, 65528, 65535, 6, 65528, 0, 6, 65528, 1, 6, 65528, 2, 6, 65528, 3, 6, 65528, 4, 6, 65528, 5, 6, 65528, 6, 6, 65529, 65531, 6, 65529, 65532, 6, 65529, 65533, 6, 65529, 65534, 6, 65529, 65535, 6, 65529, 0, 6, 65529, 1, 6, 65529, 2, 6, 65529, 3, 6, 65529, 4, 6, 65529, 5, 6, 65529, 6, 6, 65530, 65531, 6, 65530, 65532, 6, 65530, 65533, 6, 65530, 65534, 6, 65530, 65535, 6, 65530, 0, 6, 65530, 1, 6, 65530, 2, 6, 65530, 3, 6, 65530, 4, 6, 65530, 5, 6, 65530, 6, 6, 65531, 65531, 6, 65531, 65532, 6, 65531, 65533, 6, 65531, 65534, 6, 65531, 65535, 6, 65531, 0, 6, 65531, 1, 6, 65531, 2, 6, 65531, 3, 6, 65531, 4, 6, 65531, 5, 6, 65531, 6, 6, 65532, 65531, 6, 65532, 65532, 6, 65532, 65533, 6, 65532, 65534, 6, 65532, 65535, 6, 65532, 0, 6, 65532, 1, 6, 65532, 2, 6, 65532, 3, 6, 65532, 4, 6, 65532, 5, 6, 65532, 6, 6, 65533, 65531, 6, 65533, 65532, 6, 65533, 65533, 6, 65533, 65534, 6, 65533, 65535, 6, 65533, 0, 6, 65533, 1, 6, 65533, 2, 6, 65533, 3, 6, 65533, 4, 6, 65533, 5, 6, 65533, 6, 6, 65534, 65531, 6, 65534, 65532, 6, 65534, 65533, 6, 65534, 65534, 6, 65534, 65535, 6, 65534, 0, 6, 65534, 1, 6, 65534, 2, 6, 65534, 3, 6, 65534, 4, 6, 65534, 5, 6, 65534, 6, 6, 65535, 65531, 6, 65535, 65532, 6, 65535, 65533, 6, 65535, 65534, 6, 65535, 65535, 6, 65535, 0, 6, 65535, 1, 6, 65535, 2, 6, 65535, 3, 6, 65535, 4, 6, 65535, 5, 6, 65535, 6, 6, 0, 65531, 6, 0, 65532, 6, 0, 65533, 6, 0, 65534, 6, 0, 65535, 6, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 1, 65531, 6, 1, 65532, 6, 1, 65533, 6, 1, 65534, 6, 1, 65535, 6, 1, 0, 6, 1, 1, 6, 1, 2, 6, 1, 3, 6, 1, 4, 6, 1, 5, 6, 1, 6, 6, 2, 65531, 6, 2, 65532, 6, 2, 65533, 6, 2, 65534, 6, 2, 65535, 6, 2, 0, 6, 2, 1, 6, 2, 2, 6, 2, 3, 6, 2, 4, 6, 2, 5, 6, 2, 6, 6, 3, 65531, 6, 3, 65532, 6, 3, 65533, 6, 3, 65534, 6, 3, 65535, 6, 3, 0, 6, 3, 1, 6, 3, 2, 6, 3, 3, 6, 3, 4, 6, 3, 5, 6, 3, 6, 6, 4, 65531, 6, 4, 65532, 6, 4, 65533, 6, 4, 65534, 6, 4, 65535, 6, 4, 0, 6, 4, 1, 6, 4, 2, 6, 4, 3, 6, 4, 4, 6, 4, 5, 6, 4, 6, 6, 5, 65531, 6, 5, 65532, 6, 5, 65533, 6, 5, 65534, 6, 5, 65535, 6, 5, 0, 6, 5, 1, 6, 5, 2, 6, 5, 3, 6, 5, 4, 6, 5, 5, 6, 5, 6, 6, 6, 65531, 6, 6, 65532, 6, 6, 65533, 6, 6, 65534, 6, 6, 65535, 6, 6, 0, 6, 6, 1, 6, 6, 2, 6, 6, 3, 6, 6, 4, 6, 6, 5, 6, 6, 6, 6, 7, 65531, 6, 7, 65532, 6, 7, 65533, 6, 7, 65534, 6, 7, 65535, 6, 7, 0, 6, 7, 1, 6, 7, 2, 6, 7, 3, 6, 7, 4, 6, 7, 5, 6, 7, 6, 6, 8, 65531, 6, 8, 65532, 6, 8, 65533, 6, 8, 65534, 6, 8, 65535, 6, 8, 0, 6, 8, 1, 6, 8, 2, 6, 8, 3, 6, 8, 4, 6, 8, 5, 6, 8, 6, 6, 9, 65531, 6, 9, 65532, 6, 9, 65533, 6, 9, 65534, 6, 9, 65535, 6, 9, 0, 6, 9, 1, 6, 9, 2, 6, 9, 3, 6, 9, 4, 6, 9, 5, 6, 9, 6, 6, 10, 65531, 6, 10, 65532, 6, 10, 65533, 6, 10, 65534, 6, 10, 65535, 6, 10, 0, 6, 10, 1, 6, 10, 2, 6, 10, 3, 6, 10, 4, 6, 10, 5, 6, 10, 6, 6, 11, 65531, 6, 11, 65532, 6, 11, 65533, 6, 11, 65534, 6, 11, 65535, 6, 11, 0, 6, 11, 1, 6, 11, 2, 6, 11, 3, 6, 11, 4, 6, 11, 5, 6, 11, 6, 6, 12, 65531, 6, 12, 65532, 6, 12, 65533, 6, 12, 65534, 6, 12, 65535, 6, 12, 0, 6, 12, 1, 6, 12, 2, 6, 12, 3, 6, 12, 4, 6, 12, 5, 6, 12, 6, 6, 13, 65531, 6, 13, 65532, 6, 13, 65533, 6, 13, 65534, 6, 13, 65535, 6, 13, 0, 6, 13, 1, 6, 13, 2, 6, 13, 3, 6, 13, 4, 6, 13, 5, 6, 13, 6, 6, 14, 65531, 6, 14, 65532, 6, 14, 65533, 6, 14, 65534, 6, 14, 65535, 6, 14, 0, 6, 14, 1, 6, 14, 2, 6, 14, 3, 6, 14, 4, 6, 14, 5, 6, 14, 6, 6, 65521, 7, 4, 65522, 7, 4, 65523, 7, 4, 65524, 7, 4, 65525, 7, 4, 65526, 7, 4, 65527, 7, 4, 65528, 7, 4, 65529, 7, 4, 65530, 7, 4, 65531, 7, 4, 65532, 7, 4, 65533, 7, 4, 65534, 7, 4, 65535, 7, 4, 0, 7, 4, 1, 7, 4, 2, 7, 4, 3, 7, 4, 4, 7, 4, 5, 7, 1048576, 6, 7, 1048576, 7, 7, 1048576, 8, 7, 1048576, 9, 7, 4, 10, 7, 4, 11, 7, 4, 12, 7, 4, 13, 7, 4, 14, 7, 4, 65519, 7, 4, 65520, 7, 4, 15, 7, 3, 15, 65531, 5, 15, 65532, 5, 15, 65533, 5, 15, 65534, 5, 15, 65535, 5, 15, 0, 5, 15, 1, 5, 15, 2, 5, 15, 3, 5, 15, 4, 5, 15, 5, 5, 15, 6, 5, 65519, 65530, 6, 65520, 65530, 6, 65521, 65530, 6, 65522, 65530, 6, 65523, 65530, 6, 65524, 65530, 6, 65525, 65530, 6, 65526, 65530, 6, 65527, 65530, 6, 65528, 65530, 6, 65529, 65530, 6, 65530, 65530, 6, 65531, 65530, 6, 65532, 65530, 6, 65533, 65530, 6, 65534, 65530, 6, 65535, 65530, 6, 0, 65530, 6, 1, 65530, 6, 2, 65530, 6, 3, 65530, 6, 4, 65530, 6, 5, 65530, 6, 6, 65530, 6, 7, 65530, 6, 8, 65530, 6, 9, 65530, 6, 10, 65530, 6, 11, 65530, 6, 12, 65530, 6, 13, 65530, 6, 14, 65530, 6, -17, 7, 2, -16, 7, 2, -15, 7, 2, -14, 7, 2, -13, 7, 2, -12, 7, 2, -11, 7, 2, -10, 7, 2, -9, 7, 2, -8, 7, 2, -7, 7, 2, -6, 7, 2, -5, 7, 2, -4, 7, 2, -3, 7, 2, -2, 7, 2, -1, 7, 2, -65536, 7, 2, -65535, 7, 2, -65534, 7, 2, -65533, 7, 2, -65532, 7, 2, -65531, 7, 2, -65530, 7, 2, -65529, 7, 2, -65528, 7, 2, -65527, 7, 2, -65526, 7, 2, -65525, 7, 2, -65524, 7, 2, -65523, 7, 2, -65522, 7, 2, -65521, 7, 1, -65553, 7, 2, -65552, 7, 2, -65551, 7, 1, -65548, 7, 2, -65539, 7, 2, -65538, 7, 2, -65537, 7, 2, -131072, 7, 2, -131071, 7, 1, -131059, 7, 2, -131058, 7, 2, -131057, 7, 1, -131089, 7, 2, -131088, 7, 2, -131087, 7, 1, -131075, 7, 2, -131074, 7, 2, -131073, 7, 2, -196608, 7, 2, -196607, 7, 1, -196595, 7, 2, -196594, 7, 2, -196593, 7, 1, -196625, 7, 2, -196624, 7, 2, -196623, 7, 1, -196611, 7, 2, -196610, 7, 2, -196609, 7, 2, -262144, 7, 2, -262131, 7, 2, -262130, 7, 2, -262129, 7, 1, -65521, 65530, 1048578, -65521, 65531, 1048578, -65521, 65532, 1048578, -65521, 65533, 1048578, -65521, 65534, 1048578, -65521, 65535, 1048578, -65521, 0, 1048578, -65521, 1, 1048578, -65521, 2, 1048578, -65521, 3, 1048578, -65521, 4, 1048578, -65521, 5, 1048578, -65521, 6, 1048578, -131057, 65530, 1048578, -131057, 65531, 1048578, -131057, 65532, 1048578, -131057, 65533, 1048578, -131057, 65534, 1048578, -131057, 65535, 1048578, -131057, 0, 1048578, -131057, 1, 1048578, -131057, 2, 1048578, -131057, 3, 1048578, -131057, 4, 1048578, -131057, 5, 1048578, -131057, 6, 1048578, -196593, 65530, 1048578, -196593, 65531, 1048578, -196593, 65532, 1048578, -196593, 65533, 1048578, -196593, 65534, 1048578, -196593, 65535, 1048578, -196593, 0, 1048578, -196593, 1, 1048578, -196593, 2, 1048578, -196593, 3, 1048578, -196593, 4, 1048578, -196593, 5, 1048578, -196593, 6, 1048578, -262129, 65530, 1048578, -262129, 65531, 1048578, -262129, 65532, 1048578, -262129, 65533, 1048578, -262129, 65534, 1048578, -262129, 65535, 1048578, -262129, 0, 1048578, -262129, 1, 1048578, -262129, 2, 1048578, -262129, 3, 1048578, -262129, 4, 1048578, -262129, 5, 1048578, -262129, 6, 1048578, 15, 65530, 5, -262143, 7, 1, -131071, 6, 1048578, -131071, 5, 1048578, -131071, 4, 1048578, -131071, 3, 1048578, -131071, 2, 1048578, -131071, 1, 1048578, -131071, 0, 1048578, -131071, 65535, 1048578, -131071, 65534, 1048578, -131071, 65533, 1048578, -131071, 65532, 1048578, -65551, 6, 1048578, -65551, 5, 1048578, -65551, 4, 1048578, -65551, 3, 1048578, -65551, 2, 1048578, -65551, 1, 1048578, -65551, 0, 1048578, -65551, 65535, 1048578, -65551, 65534, 1048578, -65551, 65533, 1048578, -65551, 65532, 1048578, -65551, 65531, 1048578, -262143, 6, 1048578, -262143, 5, 1048578, -262143, 4, 1048578, -262143, 3, 1048578, -262143, 2, 1048578, -262143, 1, 1048578, -262143, 0, 1048578, -262143, 65535, 1048578, -262143, 65534, 1048578, -262143, 65533, 1048578, -262143, 65532, 1048578, -196607, 6, 1048578, -196607, 5, 1048578, -196607, 4, 1048578, -196607, 3, 1048578, -196607, 2, 1048578, -196607, 1, 1048578, -196607, 0, 1048578, -196607, 65535, 1048578, -196607, 65534, 1048578, -196607, 65533, 1048578, -196607, 65532, 1048578, -131087, 6, 1048578, -131087, 5, 1048578, -131087, 4, 1048578, -131087, 3, 1048578, -131087, 2, 1048578, -131087, 1, 1048578, -131087, 0, 1048578, -131087, 65535, 1048578, -131087, 65534, 1048578, -131087, 65533, 1048578, -131087, 65532, 1048578, -131087, 65531, 1048578, -196623, 6, 1048578, -196623, 5, 1048578, -196623, 4, 1048578, -196623, 3, 1048578, -196623, 2, 1048578, -196623, 1, 1048578, -196623, 0, 1048578, -196623, 65535, 1048578, -196623, 65534, 1048578, -196623, 65533, 1048578, -196623, 65532, 1048578, -196623, 65531, 1048578, -262147, 7, 2, -262146, 7, 2, -262145, 7, 2, -327680, 7, 2, -327679, 7, 1, -327683, 7, 2, -327682, 7, 2, -327681, 7, 2, -393216, 7, 2, -393215, 7, 1, -393219, 7, 2, -393218, 7, 2, -393217, 7, 2, -458752, 7, 2, -458751, 7, 1, -458755, 7, 2, -458754, 7, 2, -458753, 7, 2, -524288, 7, 2, -524287, 7, 1, -327667, 7, 2, -327666, 7, 2, -327665, 7, 1, -393203, 7, 2, -393202, 7, 2, -393201, 7, 1, -458739, 7, 2, -458738, 7, 2, -458737, 7, 1, -524275, 7, 2, -524274, 7, 2, -524273, 7, 1, -262161, 7, 2, -262160, 7, 2, -262159, 7, 1, -327697, 7, 2, -327696, 7, 2, -327695, 7, 1, -393233, 7, 2, -393232, 7, 2, -393231, 7, 1, -458769, 7, 2, -458768, 7, 2, -458767, 7, 1, -327679, 65532, 1048578, -327679, 65533, 1048578, -327679, 65534, 1048578, -327679, 65535, 1048578, -327679, 0, 1048578, -327679, 1, 1048578, -327679, 2, 1048578, -327679, 3, 1048578, -327679, 4, 1048578, -327679, 5, 1048578, -327679, 6, 1048578, -393215, 65532, 1048578, -393215, 65533, 1048578, -393215, 65534, 1048578, -393215, 65535, 1048578, -393215, 0, 1048578, -393215, 1, 1048578, -393215, 2, 1048578, -393215, 3, 1048578, -393215, 4, 1048578, -393215, 5, 1048578, -393215, 6, 1048578, -458751, 65532, 1048578, -458751, 65533, 1048578, -458751, 65534, 1048578, -458751, 65535, 1048578, -458751, 0, 1048578, -458751, 1, 1048578, -458751, 2, 1048578, -458751, 3, 1048578, -458751, 4, 1048578, -458751, 5, 1048578, -458751, 6, 1048578, -524287, 65532, 1048578, -524287, 65533, 1048578, -524287, 65534, 1048578, -524287, 65535, 1048578, -524287, 0, 1048578, -524287, 1, 1048578, -524287, 2, 1048578, -524287, 3, 1048578, -524287, 4, 1048578, -524287, 5, 1048578, -524287, 6, 1048578, -262159, 65531, 1048578, -262159, 65532, 1048578, -262159, 65533, 1048578, -262159, 65534, 1048578, -262159, 65535, 1048578, -262159, 0, 1048578, -262159, 1, 1048578, -262159, 2, 1048578, -262159, 3, 1048578, -262159, 4, 1048578, -262159, 5, 1048578, -262159, 6, 1048578, -327695, 65531, 1048578, -327695, 65532, 1048578, -327695, 65533, 1048578, -327695, 65534, 1048578, -327695, 65535, 1048578, -327695, 0, 1048578, -327695, 1, 1048578, -327695, 2, 1048578, -327695, 3, 1048578, -327695, 4, 1048578, -327695, 5, 1048578, -327695, 6, 1048578, -393231, 65531, 1048578, -393231, 65532, 1048578, -393231, 65533, 1048578, -393231, 65534, 1048578, -393231, 65535, 1048578, -393231, 0, 1048578, -393231, 1, 1048578, -393231, 2, 1048578, -393231, 3, 1048578, -393231, 4, 1048578, -393231, 5, 1048578, -393231, 6, 1048578, -458767, 65531, 1048578, -458767, 65532, 1048578, -458767, 65533, 1048578, -458767, 65534, 1048578, -458767, 65535, 1048578, -458767, 0, 1048578, -458767, 1, 1048578, -458767, 2, 1048578, -458767, 3, 1048578, -458767, 4, 1048578, -458767, 5, 1048578, -458767, 6, 1048578, -327665, 65530, 1048578, -327665, 65531, 1048578, -327665, 65532, 1048578, -327665, 65533, 1048578, -327665, 65534, 1048578, -327665, 65535, 1048578, -327665, 0, 1048578, -327665, 1, 1048578, -327665, 2, 1048578, -327665, 3, 1048578, -327665, 4, 1048578, -327665, 5, 1048578, -327665, 6, 1048578, -393201, 65530, 1048578, -393201, 65531, 1048578, -393201, 65532, 1048578, -393201, 65533, 1048578, -393201, 65534, 1048578, -393201, 65535, 1048578, -393201, 0, 1048578, -393201, 1, 1048578, -393201, 2, 1048578, -393201, 3, 1048578, -393201, 4, 1048578, -393201, 5, 1048578, -393201, 6, 1048578, -458737, 65530, 1048578, -458737, 65531, 1048578, -458737, 65532, 1048578, -458737, 65533, 1048578, -458737, 65534, 1048578, -458737, 65535, 1048578, -458737, 0, 1048578, -458737, 1, 1048578, -458737, 2, 1048578, -458737, 3, 1048578, -458737, 4, 1048578, -458737, 5, 1048578, -458737, 6, 1048578, -524273, 65530, 1048578, -524273, 65531, 1048578, -524273, 65532, 1048578, -524273, 65533, 1048578, -524273, 65534, 1048578, -524273, 65535, 1048578, -524273, 0, 1048578, -524273, 1, 1048578, -524273, 2, 1048578, -524273, 3, 1048578, -524273, 4, 1048578, -524273, 5, 1048578, -524273, 6, 1048578, 65541, 65530, 0, 65542, 65530, 0, 65543, 65530, 0, 65544, 65530, 0, 65545, 65530, 0, 65546, 65530, 0, 65545, 65531, 0, 65544, 65531, 0, 65543, 65531, 0, 131067, 7, 0, 131066, 7, 0, 131065, 7, 0, 131064, 7, 0, 131063, 7, 0, 131064, 6, 0, 131065, 6, 0, 131066, 6, 0, 131066, 5, 0, 131064, 5, 0, 196601, 7, 0, 196602, 7, 0, 131080, 65530, 0, 131081, 65530, 0, 131079, 65530, 0, 65537, 65530, 0, 65536, 65530, 0, 131071, 65530, 0, 131070, 65530, 0, 131069, 65530, 0, 65518, 65530, 6, 65518, 65531, 6, 65518, 65532, 6, 65518, 65533, 6, 65518, 65534, 6, 65518, 65535, 6, 65518, 0, 6, 65518, 1, 6, 65518, 2, 6, 65518, 3, 6, 65518, 4, 6, 65518, 5, 6, 65518, 6, 6, 65518, 7, 6, 65515, 65530, 6, 65515, 65531, 6, 65515, 65532, 6, 65515, 65533, 6, 65515, 65534, 6, 65515, 65535, 6, 65515, 0, 6, 65515, 1, 6, 65515, 2, 6, 65515, 3, 6, 65515, 4, 6, 65515, 5, 6, 65515, 6, 6, 65515, 7, 6, 65516, 65530, 6, 65516, 65531, 6, 65516, 65532, 6, 65516, 65533, 6, 65516, 65534, 6, 65516, 65535, 6, 65516, 0, 6, 65516, 1, 6, 65516, 2, 6, 65516, 3, 6, 65516, 4, 6, 65516, 5, 6, 65516, 6, 6, 65516, 7, 6, 65517, 65530, 6, 65517, 65531, 6, 65517, 65532, 6, 65517, 65533, 6, 65517, 65534, 6, 65517, 65535, 6, 65517, 0, 6, 65517, 1, 6, 65517, 2, 6, 65517, 3, 6, 65517, 4, 6, 65517, 5, 6, 65517, 6, 6, 65517, 7, 6, -131060, 7, 2, -196596, 7, 2, -262132, 7, 2, -327668, 7, 2, -393204, 7, 2, -458740, 7, 2, -524276, 7, 2, 16, 1, 4, 16, 0, 6, 16, 65535, 6, 17, 65535, 6, 17, 0, 6, 17, 1, 4, 18, 65535, 6, 18, 0, 6, 18, 1, 4, 19, 65535, 6, 19, 0, 6, 19, 1, 4, 20, 65535, 6, 20, 0, 6, 20, 1, 4, 21, 65535, 6, 21, 0, 6, 21, 1, 4, 22, 65535, 6, 22, 0, 6, 22, 1, 4, 23, 65535, 6, 23, 0, 6, 23, 1, 4, 24, 65535, 6, 24, 0, 6, 24, 1, 4, 25, 65535, 6, 25, 0, 6, 25, 1, 4, 26, 65535, 6, 26, 0, 6, 26, 1, 4, 27, 65535, 6, 27, 0, 6, 27, 1, 4, 28, 65535, 6, 28, 0, 6, 28, 1, 4, -65520, 1, 2, -65519, 1, 2, -65518, 1, 2, -65517, 1, 2, -65516, 1, 2, -65515, 1, 2, -65514, 1, 2, -65513, 1, 2, -65512, 1, 2, -65511, 1, 2, -65510, 1, 2, -65509, 1, 2, -65508, 1, 2, -131056, 1, 2, -131055, 1, 2, -131054, 1, 2, -131053, 1, 2, -131052, 1, 2, -131051, 1, 2, -131050, 1, 2, -131049, 1, 2, -131048, 1, 2, -131047, 1, 2, -131046, 1, 2, -131045, 1, 2, -131044, 1, 2, -196592, 1, 2, -196591, 1, 2, -196590, 1, 2, -196589, 1, 2, -196588, 1, 2, -196587, 1, 2, -196586, 1, 2, -196585, 1, 2, -196584, 1, 2, -196583, 1, 2, -196582, 1, 2, -196581, 1, 2, -196580, 1, 2, -262128, 1, 2, -262127, 1, 2, -262126, 1, 2, -262125, 1, 2, -262124, 1, 2, -262123, 1, 2, -262122, 1, 2, -262121, 1, 2, -262120, 1, 2, -262119, 1, 2, -262118, 1, 2, -262117, 1, 2, -262116, 1, 2, -131070, 7, 2, -131069, 7, 2, -131068, 7, 2, -131067, 7, 2, -131066, 7, 2, -131065, 7, 2, -131064, 7, 2, -131063, 7, 2, -131062, 7, 2, -131061, 7, 2, -65546, 7, 2, -65545, 7, 2, -65544, 7, 2, -65543, 7, 2, -65542, 7, 2, -65541, 7, 2, -65540, 7, 2, -196597, 7, 2, -262133, 7, 2, -327669, 7, 2, -393205, 7, 2, -458741, 7, 2, -524277, 7, 2, -65549, 7, 2, -65550, 7, 2, -131086, 7, 2, -196622, 7, 2, -262158, 7, 2, -327694, 7, 2, -393230, 7, 2, -458766, 7, 2, -65547, 7, 2)
}
metadata/_editor_floor_ = Vector3(0, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="geo"]
transform = Transform3D(105.69242, 0, 0, 0, 1, 0, 0, 0, 71.13601, 0, -17, 0)
material_override = SubResource("StandardMaterial3D_bly0l")
mesh = SubResource("PlaneMesh_0lut4")
skeleton = NodePath("../..")

[node name="SlowZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95620894, 0)
script = ExtResource("5_atxxn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SlowZone"]
mesh = SubResource("CylinderMesh_7jl4a")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SlowZone"]
shape = SubResource("CylinderShape3D_bgbp7")
