[gd_scene load_steps=8 format=3 uid="uid://brmdsiu0kp6ca"]

[ext_resource type="Script" uid="uid://c74o40qwxv1la" path="res://scripts/utility/player_manager.gd" id="1_lyudl"]
[ext_resource type="PackedScene" uid="uid://brw0p1eirto83" path="res://scenes/final/Nova.tscn" id="2_dvwxt"]
[ext_resource type="Script" uid="uid://br0axf7abuchp" path="res://scripts/camera_target.gd" id="3_3c5ji"]
[ext_resource type="PackedScene" uid="uid://c2akhsyinel8t" path="res://scenes/final/dawn/dawn.tscn" id="3_kpy7t"]
[ext_resource type="PackedScene" uid="uid://bq7t53o2llxr4" path="res://scenes/final/rene/Rene.tscn" id="3_q78nk"]
[ext_resource type="Script" uid="uid://djfekv55fum3x" path="res://scripts/pitch_pivot.gd" id="4_mbt4c"]
[ext_resource type="PackedScene" uid="uid://dpgvc8tlj8842" path="res://scenes/dev/christian_d/game_ui.tscn" id="5_chdrm"]

[node name="PlayerManager" type="Node3D"]
script = ExtResource("1_lyudl")

[node name="Nova" parent="." instance=ExtResource("2_dvwxt")]
process_mode = 3
top_level = true

[node name="Rene" parent="." instance=ExtResource("3_q78nk")]
max_click_time = 0.25
attack_charge_time = 0.5
max_attack_charges = 1
combo_reset_time = 0.6
input_smoothing_speed = 8.0
dash_cd = 1.0
dash_distance = 5.0
_base_speed = 5.0
_hp = 10.0
_max_hp = 10.0
_break_percent = 0.0
_break_hits = 3
_break_drain_rate = 0.05
_break_cooldown = 5.0
passive_death_time = 2.5

[node name="Dawn" parent="." instance=ExtResource("3_kpy7t")]

[node name="CameraTarget" type="Node3D" parent="."]
top_level = true
script = ExtResource("3_3c5ji")
metadata/_custom_type_script = "uid://br0axf7abuchp"

[node name="Camera3D" type="Camera3D" parent="CameraTarget"]
transform = Transform3D(0.70710677, -0.4055798, 0.579228, 0, 0.81915206, 0.57357645, -0.70710677, -0.4055798, 0.579228, 25, 25, 25)
projection = 1
size = 25.0

[node name="Shake" type="Node" parent="CameraTarget/Camera3D"]
script = ExtResource("4_mbt4c")

[node name="FmodBankLoader" type="FmodBankLoader" parent="."]
bank_paths = ["res://sounds/banks/Player.bank"]

[node name="FmodListener3D" type="FmodListener3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="GameUi" parent="." instance=ExtResource("5_chdrm")]

[connection signal="player_hp_update" from="." to="GameUi" method="update_health"]
[connection signal="player_sp_update" from="." to="GameUi" method="update_special"]
[connection signal="player_special_ready" from="." to="GameUi/MarginContainer/Offset/Special" method="bounce"]

[editable path="GameUi"]
